samples/_failures_safe/1761279538_860a4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83b6c5c7.c: In function ‘main’:
./samples/SAFE/__tmp_83b6c5c7.c:150:44: error: expected ‘)’ at end of input
  150 |         double det = compute_determinant(&b
      |                                         ~  ^
      |                                            )
./samples/SAFE/__tmp_83b6c5c7.c:150:9: error: expected declaration or statement at end of input
  150 |         double det = compute_determinant(&b
      |         ^~~~~~
./samples/SAFE/__tmp_83b6c5c7.c:150:9: error: expected declaration or statement at end of input
